--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.12",
+    "nodemailer": "^6.2.1",
     "npm-run-all": "^4.1.5",
+    "regenerator-runtime": "^0.13.2",
     "rimraf": "^2.6.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
+    "@babel/core": "^7.4.5",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-babel": "^5.3.0",
