--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npm run prod",
     "server": "babel-node ./src/server",
     "server:prod": "node ./dist/server",
-    "dev": "NODE_ENV=development npm-run-all server",
+    "dev": "node start.js",
     "clean": "rimraf dist",
     "build": "babel ./src --out-dir dist",
     "prod": "NODE_ENV=production npm-run-all clean build server:prod",
@@ -43,7 +43,7 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.14.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.4"
   },
   "eslintConfig": {
     "extends": "airbnb",
