--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,29 @@
-version : '3'
+version : '3.4'
+
 services :
   app:
     container_name : porty-backend
     restart : always
     build : .
     ports : 
-      - '3030:5000'
-    
+      - '${PORT}:${PORT}'
+    healthcheck:
+      test: ["CMD", "curl", "http://localhost"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: "unless-stopped" 
+    networks:
+      - "internal"
+      - "reverseproxy"
+    env_file:
+      - ./.env
+    environment:
+      - VIRTUAL_HOST
+
+networks:
+  reverseproxy:
+    external:
+      name: "reverseproxy"
+  internal:
