--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version : '3.4'
+version: '3.4'
 
-services :
-  app:
-    container_name : porty-backend
-    restart : always
-    build : .
-    ports : 
+services:
+  porty_backend:
+    build: .
+    image: "${REGISTRY_NAME}devclubiitd/porty_backend:0.1"
+    ports:
       - '${PORT}:${PORT}'
     healthcheck:
       test: ["CMD", "curl", "http://localhost"]
