--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   porty_backend:
     image: "${REGISTRY_NAME}devclubiitd/porty_backend:0.1"
     healthcheck:
-      test: ["CMD", "curl", "http://localhost"]
+      test: ["CMD", "curl", "http://localhost:${PORT}"]
       interval: 1m30s
       timeout: 10s
       retries: 3
@@ -23,6 +23,7 @@ services:
       - '${PORT}:${PORT}'
     environment:
       - VIRTUAL_HOST
+      - MONGODB_URI_LOCAL
     networks:
       - "internal"
       - "reverseproxy"
