--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nodemailer": "^6.2.1",
     "npm-run-all": "^4.1.5",
     "regenerator-runtime": "^0.13.2",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
