--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.0.1",
+    "googleapis": "^49.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
     "nodemailer": "^6.2.1",
     "npm-run-all": "^4.1.5",
     "regenerator-runtime": "^0.13.2",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
