--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "build": "babel ./src --out-dir dist",
     "prod": "NODE_ENV=production npm-run-all clean build server:prod",
     "watch": "nodemon",
-    "lint": "eslint --fix 'src/**/*.js'"
+    "eslint-test": "eslint './**/*.js'",
+    "eslint-fix": "eslint --fix './**/*.js'",
+    "prettier-test": "prettier --check './**/*.js'",
+    "prettier-fix": "prettier --write './**/*.js'",
+    "lint-tests": "rimraf dist/ && npm run eslint-test && npm run prettier-test",
+    "lint-fixes": "rimraf dist/;npm run eslint-fix;npm run prettier-fix"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -26,7 +31,7 @@
     "npm-run-all": "^4.1.5",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^2.6.3",
-    "xoauth2": "^1.2.0"
+    "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -37,28 +42,21 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^6.0.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.14.1",
     "minimist": "^1.2.5",
     "nodemon": "^2.0.2",
+    "prettier": "^2.0.5",
     "set-value": "^3.0.1"
-  },
-  "eslintConfig": {
-    "extends": "airbnb",
-    "parserOptions": {
-      "ecmaVersion": 2018
-    },
-    "env": {
-      "browser": true
-    },
-    "parser": "babel-eslint"
   },
   "browserslist": {
     "production": [
