--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.1",
   "private": false,
   "scripts": {
-    "start": "node start.js",
     "server": "babel-node ./src/server",
     "server:prod": "node ./dist/server",
     "dev": "node start.js",
     "clean": "rimraf dist",
+    "build": "rimraf dist/ && babel ./src --out-dir dist/ --copy-files",
+    "start": "npm run build && node dist/server.js",
     "prod": "NODE_ENV=production npm-run-all clean build server:prod",
     "watch": "nodemon",
     "eslint-test": "eslint './**/*.js'",
@@ -28,21 +29,11 @@
     "mongoose": "^5.7.5",
     "nodemailer": "^6.2.1",
     "npm-run-all": "^4.1.5",
-    "regenerator-runtime": "^0.13.2",
-    "rimraf": "^2.6.3",
-    "babel-polyfill": "^6.26.0"
+    "rimraf": "^2.6.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.4.5",
-    "@babel/node": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/register": "^7.9.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
+    "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
