--- a/package.json
+++ b/package.json
@@ -19,19 +19,22 @@
     "lint-fixes": "rimraf dist/;npm run eslint-fix;npm run prettier-fix"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.0.1",
     "googleapis": "^49.0.0",
+    "helmet": "^3.23.2",
     "jsonwebtoken": "^8.5.1",
+    "lusca": "^1.6.1",
     "mongoose": "^5.7.5",
     "nodemailer": "^6.2.1",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^2.6.3",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "rimraf": "^2.6.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
