--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "lint-fixes": "rimraf dist/;npm run eslint-fix;npm run prettier-fix"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
