--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prettier-test": "prettier --check './**/*.js'",
     "prettier-fix": "prettier --write './**/*.js'",
     "lint-tests": "rimraf dist/ && npm run eslint-test && npm run prettier-test",
-    "lint-fixes": "rimraf dist/;npm run eslint-fix;npm run prettier-fix"
+    "lint-fixes": "rimraf dist/;npm run eslint-fix;npm run prettier-fix",
+    "devStart": "nodemon --ignore dist/ -e coffee,js,ejs,css --exec npm start"
   },
   "dependencies": {
     "axios": "^0.19.2",
