--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
     "prettier-test": "prettier --check './**/*.js'",
     "prettier-fix": "prettier --write './**/*.js'",
     "lint-tests": "rimraf dist/ && npm run eslint-test && npm run prettier-test",
-    "lint-fixes": "rimraf dist/;npm run eslint-fix;npm run prettier-fix"
+    "lint-fixes": "rimraf dist/;npm run eslint-fix;npm run prettier-fix",
+    "devStart": "nodemon --ignore dist/ -e coffee,js,ejs,css --exec npm start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.0.1",
-    "googleapis": "^49.0.0",
     "helmet": "^3.23.2",
     "jsonwebtoken": "^8.5.1",
     "lusca": "^1.6.1",
