--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "devStart": "nodemon --ignore dist/ -e coffee,js,ejs,css --exec npm start"
   },
   "dependencies": {
+    "@octokit/rest": "^18.0.6",
     "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
