--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^5.7.5",
     "nodemailer": "^6.2.1",
     "npm-run-all": "^4.1.5",
+    "query-string": "^6.13.2",
     "rimraf": "^2.6.3"
   },
   "devDependencies": {
