Added deployment to Github pages (#22) 🚀
* set up deploy apis

* finalize changes

* small fix

* update msgs

* small fixes

* local working

* add confirm routes

* more changes

* Make URL for dev and prod

* added dev urls

* all done for now

* final comments

* prettier fixes

* eslint fixes

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "devStart": "nodemon --ignore dist/ -e coffee,js,ejs,css --exec npm start"
   },
   "dependencies": {
+    "@octokit/rest": "^18.0.6",
     "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -36,6 +37,7 @@
     "mongoose": "^5.7.5",
     "nodemailer": "^6.2.1",
     "npm-run-all": "^4.1.5",
+    "query-string": "^6.13.2",
     "rimraf": "^2.6.3"
   },
   "devDependencies": {
